--- a/examples/Makefile
+++ b/examples/Makefile
@@ -1,4 +1,8 @@
 GHC := ghc
+CORE2ISA := ../cabal-dev/bin/core2isa
 
 %.hcr : %.hs
 	$(GHC) -O0 -fforce-recomp -fext-core -c $<
+
+%.thy : %.hcr
+	$(CORE2ISA) $< > $@
