--- a/examples/Makefile
+++ b/examples/Makefile
@@ -1,8 +1,8 @@
 GHC := ghc
-CORE2ISA := ../cabal-dev/bin/core2isa
+HCR2THY := ../cabal-dev/bin/hcr2thy
 
 %.hcr : %.hs
 	$(GHC) -O0 -fforce-recomp -fext-core -c $<
 
 %.thy : %.hcr
-	$(CORE2ISA) $< > $@
+	$(HCR2THY) $< > $@
